# throttling-challenge

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
account/: serializers.py  urls.py  views.py
account/authentication/: apps.py
communication/: models.py  serializers.py  tests.py  throttles.py  urls.py  views.py
communication/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: mixins.py  models.py  throttles.py
core/migrations/: 0001_initial.py
