[project]
name = "throttling-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.16,<3.17",
    "drf-spectacular>=0.29.0",
    "psycopg[binary]>=3.3,<4.0",
    "python-dotenv>=1.1,<2.0",
    "redis>=6.0,<7.0",
]
